--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffffff",
-        "activityBar.background": "#ffffff",
+        "activityBar.activeBackground": "#6cfa4f",
+        "activityBar.background": "#6cfa4f",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#df9f9f",
+        "activityBarBadge.background": "#647efb",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#ffffff",
-        "statusBar.background": "#f3dde7",
+        "sash.hoverBorder": "#6cfa4f",
+        "statusBar.background": "#43f91d",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#e6b7cc",
-        "statusBarItem.remoteBackground": "#f3dde7",
+        "statusBarItem.hoverBackground": "#2bdd06",
+        "statusBarItem.remoteBackground": "#43f91d",
         "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#f3dde7",
+        "titleBar.activeBackground": "#43f91d",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#f3dde799",
+        "titleBar.inactiveBackground": "#43f91d99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.remoteColor": "#f3dde7"
+    "peacock.remoteColor": "#43f91d"
 }
