--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#6cfa4f",
-        "activityBar.background": "#6cfa4f",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#647efb",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#6cfa4f",
-        "statusBar.background": "#43f91d",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#2bdd06",
-        "statusBarItem.remoteBackground": "#43f91d",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#43f91d",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#43f91d99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#6b4fe5",
+        "activityBar.background": "#6b4fe5",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#6f2210",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#6b4fe5",
+        "statusBar.background": "#4523df",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#6b4fe5",
+        "statusBarItem.remoteBackground": "#4523df",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#4523df",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#4523df99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#43f91d"
+    "peacock.remoteColor": "#4523df"
 }
